Fix site url for main
Signed-off-by: ejkim <ejkim@morai.ai>

--- a/config/en/mkdocs.yml
+++ b/config/en/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: 'MORAI SIM 1.0 - EN'
 docs_dir: '../../docs/en'
 site_dir: '../../site/en'
-site_url: https://morai-docs.github.io/sim1.0/en
+site_url: https://morai-docs.github.io/sim1.0/site/en
 site_description: Release Documentation for MORAI SIM 1.0
 site_author: MORAI Engineering Service Team
 
@@ -79,11 +79,11 @@ plugins:
 extra:
   alternate:
     - name: Korean
-      link: /sim1.0/ko/ 
+      link: /sim1.0/site/ko/ 
       lang: ko
 
     - name: English
-      link: /sim1.0/en/ 
+      link: /sim1.0/site/en/ 
       lang: en
 
 
