Update docs urls
Signed-off-by: ejkim <ejkim@morai.ai>

--- a/config/en/mkdocs.yml
+++ b/config/en/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: 'MORAI SIM 1.0 - EN'
+site_name: 'SIM 1.0 / EN'
 docs_dir: '../../docs/en'
 site_dir: '../../site/en'
 site_url: https://morai-docs.github.io/sim1.0/site/en
@@ -59,7 +59,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: assets/Favicon.png
+  favicon: 'assets/favicon2.png'
   icon:
     logo: logo
   language: en
@@ -133,6 +133,11 @@ markdown_extensions:
 # Page tree
 nav:
   - Home: index.md
+  - Getting Started:
+    - getting-started/index.md
+    - System Requirements: getting-started/requirements.md
+    - Execution: getting-started/execution.md
+    - getting-started/network.md
   - SIM Drive: 
     - simdrive/index.md
     - Release Note: simdrive/release/release-notes.md
@@ -142,10 +147,8 @@ nav:
       - simdrive/about/terms-conventions.md
     - Introduction: 
       - simdrive/intro/morai-simair.md
-    - Gettign Started: 
-      - simdrive/getting-started/index.md
-      - simdrive/getting-started/installation.md
-      - User Interface: simdrive/getting-started/ui.md
+    - User Interface: 
+      - simdrive/ui.md
     - Using SIM Drive:
       - simdrive/user-guide/index.md
       - Basic Controls: simdrive/user-guide/basic-controls.md
