--- a/config/ko/mkdocs.yml
+++ b/config/ko/mkdocs.yml
@@ -59,7 +59,7 @@ theme:
   font:
     text: sans-serif
     code: Roboto Mono
-  favicon: assets/Favicon.png
+  favicon: 'assets/favicon2.png'
   icon:
     logo: logo
   language: ko
