Update ko basic info and operation
Signed-off-by: ejkim <ejkim@morai.ai>

--- a/config/ko/mkdocs.yml
+++ b/config/ko/mkdocs.yml
@@ -59,7 +59,7 @@ theme:
   font:
     text: sans-serif
     code: Roboto Mono
-  favicon: 'assets/favicon2.png'
+  favicon: 'assets/favicon.png'
   icon:
     logo: logo
   language: ko
